<resources>
    <string name="app_name">Calculator</string>
    <string name="x">Introduzca X</string>
    <string name="y">Introduzca Y</string>
    <string name="button">Sumar</string>
    <string name="text_res">El resultado de la suma es:</string>
    <string name="b0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="bplus">+</string>
    <string name="bequal">=</string>
    <string name="bclear">C</string>
</resources>