<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/x"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:layout_gravity="left"
                android:hint="@string/x">
            </EditText>
            <EditText
                android:id="@+id/y"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:layout_gravity="right"
                android:hint="@string/y">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_alignParentBottom="true"
            android:showDividers="middle"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/b1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_weight="0.3"
                        android:layout_marginRight="3dp"
                        android:text="@string/b1" />

                    <Button
                        android:id="@+id/b2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.3"
                        android:text="@string/b2" />

                    <Button
                        android:id="@+id/b3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:layout_weight="0.3"
                        android:layout_marginLeft="3dp"
                        android:text="@string/b3" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/b4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:layout_marginRight="3dp"
                        android:text="@string/b4" />

                    <Button
                        android:id="@+id/b5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:text="@string/b5" />

                    <Button
                        android:id="@+id/b6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:layout_marginLeft="3dp"
                        android:text="@string/b6" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/b7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:layout_marginRight="3dp"
                        android:text="@string/b7" />

                    <Button
                        android:id="@+id/b8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:text="@string/b8" />

                    <Button
                        android:id="@+id/b9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:layout_marginLeft="3dp"
                        android:text="@string/b9" />
                </LinearLayout>

                <Button
                    android:id="@+id/b0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/b0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bplus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:text="@string/bplus" />

                <Button
                    android:id="@+id/bequal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:text="@string/bequal" />

                <Button
                    android:id="@+id/bclear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:text="@string/bclear" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>